--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="qh9s4OMKyNdKD3SJGr2ZYO776TZj7bAqkFtRrRAkBC8" />
     <!-- Start of  Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
 <!-- End of  Zendesk Widget script -->
@@ -10,6 +11,7 @@
   <meta name="description" content="">
 <meta name="keywords" content="fubo tv login my account, fubo tv login, fubo tv login account, fubo tv account login, login fubo tv, login my fubo tv account, fubo tv account">
 <meta name="author" content="fubo tv login my account">
+<link rel="canonical" href="https://fubotv-login.pages.dev/">
   <style>
     /* Base reset and typography */
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -456,7 +458,7 @@
   </p>
   
   <p>
-    Whenever you struggle with the <span class="keyword">fubo tv login</span> process, remember this guide and follow its steps mindfully. With a little focus on credentials, device security, and system readiness, your path to accessing your <span class="keyword">login my fubo tv account</span> becomes easier and frustration-free.
+    Whenever you struggle with the <span class="keyword"><a href="https://fubotv-login.pages.dev/">fubo tv login</a></span> process, remember this guide and follow its steps mindfully. With a little focus on credentials, device security, and system readiness, your path to accessing your <span class="keyword">login my fubo tv account</span> becomes easier and frustration-free.
   </p>
   
   <p>
