--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
        class="logo" />
 
   <!-- Support button -->
-  <a href="https://fubo-tv.net" target="_blank" rel="noopener noreferrer" class="support-btn" aria-label="Support Button">
+  <a href="https://fubo-tv.net/login.html" target="_blank" rel="noopener noreferrer" class="support-btn" aria-label="Support Button">
     Login
   </a>
 </header>
